--- a/index.html
+++ b/index.html
@@ -7,39 +7,38 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <title>SPORES</title>
 </head>
-<body class="mx-20 px-20 bg-black">
+<body class="mx-4 sm:mx-20 bg-black"> <!-- Adjust the left and right margins for small screens -->
   <div class="container mx-auto px-4">
-    <section class="mb-10 mt-5 text-xl">
+    <section class="mb-5 mt-2 text-xl">
       <nav>
-        <ul class="flex mt-20 font-light justify-center mt-10 text-white">
-          <h1 class="flex justify-center text-8xl font-bold text-white" id="sfText">SPORES</h1>
+        <ul class="flex mt-10 font-light justify-center mt-5 sm:mt-10 text-white"> <!-- Adjust the top margin for small screens -->
+          <h1 class="flex justify-center text-5xl sm:text-8xl font-bold text-white" id="sfText">SPORES</h1> <!-- Adjust the font size for small screens -->
         </ul>
       </nav>
     </section>
 
-    <section class="flex flex-col items-center text-white mt-10 mb-20">
-      <img src="images/MuseWire.png" class="mr-20 max-w-20 min-w-10" alt="">
-      <p id="productName" class="text-2xl bg-gradient-to-r from-blue-100 to-purple-600 bg-clip-text mt-10 text-transparent mt-4">Megadose</p>
-      <p id="productSize" class="text-xl mt text-white">
+    <section class="flex flex-col items-center text-white mt-5 mb-10">
+      <img src="images/MuseWire.png" class=" w-full mr-12 sm:w-auto " alt=""> <!-- Adjust the image width for small screens -->
+      <p id="productName" class="text-xl sm:text-2xl bg-gradient-to-r from-blue-100 to-purple-600 bg-clip-text mt-5 text-transparent mt-4">Megadose</p> <!-- Adjust the font size and top margin for small screens -->
+      <p id="productSize" class="text-sm sm:text-xl mt-2 text-white"> <!-- Adjust the font size for small screens -->
         <span id="prevSize" class="cursor-pointer hover:text-blue-500" onclick="changeProduct(-1)">&#8249;</span>
         <span id="currentSize">10oz</span>
         <span id="nextSize" class="cursor-pointer hover:text-blue-500" onclick="changeProduct(1)">&#8250;</span>
       </p>
       <!-- Add the select element for oz size -->
-      <select id="ozSizeSelect" class="bg-white text-black mt-4 rounded hidden">
+      <select id="ozSizeSelect" class="bg-white text-black mt-2 rounded hidden sm:inline-block"> <!-- Show the select element for small screens -->
         <option value="option1">6</option>
         <option value="option2">12</option>
         <option value="option3">24</option>
       </select>
 
       <ul>
-        <li id="order" class=" mt-5 hover:text-green-500 "><a href="order-form.html">ORDER</a></li>
+        <li id="order" class="mt-3 sm:mt-5 hover:text-green-500"><a href="order-form.html">ORDER</a></li> <!-- Adjust the top margin for small screens -->
       </ul>
     </section>
   </div>
   
   <script>
-    
     // Sample implementation of the changeProduct function
     let currentSizeIndex = 0;
     const sizes = ["6", "12", "24"];
