--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <title>SPORES</title>
+  <style>
+    @media (max-width: 768px) {
+      /* Mobile styles here */
+      body {
+        /* Increase the font size of the body text on small screens */
+        font-size: 18px;
+      }
+    }
+  </style>
 </head>
-<body class="mx-4 sm:mx-20 bg-black"> <!-- Adjust the left and right margins for small screens -->
+<body class="mx-4 sm:mx-20 bg-black mt-20"> <!-- Adjust the left and right margins for small screens -->
   <div class="container mx-auto px-4">
     <section class="mb-5 mt-2 text-xl">
       <nav>
@@ -18,7 +27,7 @@
     </section>
 
     <section class="flex flex-col items-center text-white mt-5 mb-10">
-      <img src="images/MuseWire.png" class=" w-full mr-12 sm:w-auto " alt=""> <!-- Adjust the image width for small screens -->
+      <img src="images/MuseWire.png" class="max:w-80 flex justify-center mr-10" alt=""> <!-- Adjust the image width for small screens -->
       <p id="productName" class="text-xl sm:text-2xl bg-gradient-to-r from-blue-100 to-purple-600 bg-clip-text mt-5 text-transparent mt-4">Megadose</p> <!-- Adjust the font size and top margin for small screens -->
       <p id="productSize" class="text-sm sm:text-xl mt-2 text-white"> <!-- Adjust the font size for small screens -->
         <span id="prevSize" class="cursor-pointer hover:text-blue-500" onclick="changeProduct(-1)">&#8249;</span>
@@ -74,3 +83,4 @@
   </script>
 </body>
 </html>
+
