--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       /* Mobile styles here */
       body {
         /* Increase the font size of the body text on small screens */
-        font-size: 18px;
+        font-size: 30px;
       }
     }
   </style>
 </head>
-<body class="mx-4 sm:mx-20 bg-black mt-20"> <!-- Adjust the left and right margins for small screens -->
+<body class="mx-4 sm:mx-20 bg-black mt-20 sm:mt-60"> <!-- Adjust the left and right margins for small screens -->
   <div class="container mx-auto px-4">
     <section class="mb-5 mt-2 text-xl">
       <nav>
@@ -83,4 +83,5 @@
   </script>
 </body>
 </html>
+
 
